perf(course): 코스 목록 읽기 모델과 GraphHopper 측정 하네스 개선